; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regproc.c_getRegKeyName.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regproc.c_getRegKeyName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_MAX_LEN = common dso_local global i32 0, align 4
@currentKeyName = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @getRegKeyName(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %9 = load i32, i32* @KEY_MAX_LEN, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  store i32 1, i32* %7, align 4
  br label %53

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @_tcscpy(i32* %12, i32* %17)
  %19 = call i32 @_T(i8 signext 92)
  %20 = call i32* @_tcschr(i32* %12, i32 %19)
  store i32* %20, i32** %4, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %34

23:                                               ; preds = %16
  %24 = load i32*, i32** %4, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %4, align 8
  %26 = call i32 @_T(i8 signext 93)
  %27 = call i32* @_tcschr(i32* %12, i32 %26)
  store i32* %27, i32** %8, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %23
  %31 = call i32 @_T(i8 signext 0)
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  br label %33

33:                                               ; preds = %30, %23
  br label %38

34:                                               ; preds = %16
  %35 = call i32 @_tcslen(i32* %12)
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %12, i64 %36
  store i32* %37, i32** %4, align 8
  br label %38

38:                                               ; preds = %34, %33
  %39 = call i32 (...) @GetProcessHeap()
  %40 = load i32*, i32** %4, align 8
  %41 = call i32 @_tcslen(i32* %40)
  %42 = add nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = mul i64 %43, 4
  %45 = trunc i64 %44 to i32
  %46 = call i32* @HeapAlloc(i32 %39, i32 0, i32 %45)
  store i32* %46, i32** @currentKeyName, align 8
  %47 = load i32*, i32** @currentKeyName, align 8
  %48 = call i32 @CHECK_ENOUGH_MEMORY(i32* %47)
  %49 = load i32*, i32** @currentKeyName, align 8
  %50 = load i32*, i32** %4, align 8
  %51 = call i32 @_tcscpy(i32* %49, i32* %50)
  %52 = load i32*, i32** @currentKeyName, align 8
  store i32* %52, i32** %2, align 8
  store i32 1, i32* %7, align 4
  br label %53

53:                                               ; preds = %38, %15
  %54 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %54)
  %55 = load i32*, i32** %2, align 8
  ret i32* %55
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @_tcscpy(i32*, i32*) #2

declare dso_local i32* @_tcschr(i32*, i32) #2

declare dso_local i32 @_T(i8 signext) #2

declare dso_local i32 @_tcslen(i32*) #2

declare dso_local i32* @HeapAlloc(i32, i32, i32) #2

declare dso_local i32 @GetProcessHeap(...) #2

declare dso_local i32 @CHECK_ENOUGH_MEMORY(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
